--- a/SFCrime-iPy.ipynb
+++ b/SFCrime-iPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -10,6 +10,10 @@
    "source": [
     "# This tells matplotlib not to try opening a new window for each plot.\n",
     "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('/usr/local/lib/python2.7/site-packages/')\n",
     "\n",
     "import datetime\n",
     "import pandas as pd\n",
@@ -24,13 +28,12 @@
     "from sklearn import preprocessing\n",
     "from sklearn import metrics\n",
     "from sklearn.grid_search import GridSearchCV\n",
-    "import csv\n",
-    "import sys"
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -70,63 +73,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2015-05-13 23:53:00</td>\n",
-       "      <td>WARRANTS</td>\n",
-       "      <td>WARRANT ARREST</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>NORTHERN</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>OAK ST / LAGUNA ST</td>\n",
+       "      <td> 2015-05-13 23:53:00</td>\n",
+       "      <td>       WARRANTS</td>\n",
+       "      <td>               WARRANT ARREST</td>\n",
+       "      <td> Wednesday</td>\n",
+       "      <td> NORTHERN</td>\n",
+       "      <td> ARREST, BOOKED</td>\n",
+       "      <td>        OAK ST / LAGUNA ST</td>\n",
        "      <td>-122.425892</td>\n",
-       "      <td>37.774599</td>\n",
+       "      <td> 37.774599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2015-05-13 23:53:00</td>\n",
-       "      <td>OTHER OFFENSES</td>\n",
-       "      <td>TRAFFIC VIOLATION ARREST</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>NORTHERN</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>OAK ST / LAGUNA ST</td>\n",
+       "      <td> 2015-05-13 23:53:00</td>\n",
+       "      <td> OTHER OFFENSES</td>\n",
+       "      <td>     TRAFFIC VIOLATION ARREST</td>\n",
+       "      <td> Wednesday</td>\n",
+       "      <td> NORTHERN</td>\n",
+       "      <td> ARREST, BOOKED</td>\n",
+       "      <td>        OAK ST / LAGUNA ST</td>\n",
        "      <td>-122.425892</td>\n",
-       "      <td>37.774599</td>\n",
+       "      <td> 37.774599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-05-13 23:33:00</td>\n",
-       "      <td>OTHER OFFENSES</td>\n",
-       "      <td>TRAFFIC VIOLATION ARREST</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>NORTHERN</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>VANNESS AV / GREENWICH ST</td>\n",
+       "      <td> 2015-05-13 23:33:00</td>\n",
+       "      <td> OTHER OFFENSES</td>\n",
+       "      <td>     TRAFFIC VIOLATION ARREST</td>\n",
+       "      <td> Wednesday</td>\n",
+       "      <td> NORTHERN</td>\n",
+       "      <td> ARREST, BOOKED</td>\n",
+       "      <td> VANNESS AV / GREENWICH ST</td>\n",
        "      <td>-122.424363</td>\n",
-       "      <td>37.800414</td>\n",
+       "      <td> 37.800414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2015-05-13 23:30:00</td>\n",
-       "      <td>LARCENY/THEFT</td>\n",
-       "      <td>GRAND THEFT FROM LOCKED AUTO</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>NORTHERN</td>\n",
-       "      <td>NONE</td>\n",
-       "      <td>1500 Block of LOMBARD ST</td>\n",
+       "      <td> 2015-05-13 23:30:00</td>\n",
+       "      <td>  LARCENY/THEFT</td>\n",
+       "      <td> GRAND THEFT FROM LOCKED AUTO</td>\n",
+       "      <td> Wednesday</td>\n",
+       "      <td> NORTHERN</td>\n",
+       "      <td>           NONE</td>\n",
+       "      <td>  1500 Block of LOMBARD ST</td>\n",
        "      <td>-122.426995</td>\n",
-       "      <td>37.800873</td>\n",
+       "      <td> 37.800873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-05-13 23:30:00</td>\n",
-       "      <td>LARCENY/THEFT</td>\n",
-       "      <td>GRAND THEFT FROM LOCKED AUTO</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>PARK</td>\n",
-       "      <td>NONE</td>\n",
-       "      <td>100 Block of BRODERICK ST</td>\n",
+       "      <td> 2015-05-13 23:30:00</td>\n",
+       "      <td>  LARCENY/THEFT</td>\n",
+       "      <td> GRAND THEFT FROM LOCKED AUTO</td>\n",
+       "      <td> Wednesday</td>\n",
+       "      <td>     PARK</td>\n",
+       "      <td>           NONE</td>\n",
+       "      <td> 100 Block of BRODERICK ST</td>\n",
        "      <td>-122.438738</td>\n",
-       "      <td>37.771541</td>\n",
+       "      <td> 37.771541</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -155,7 +158,7 @@
        "4 -122.438738  37.771541  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,9 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -243,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -254,21 +257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "train_df['date'] = dates.date\n",
     "train_df['time'] = dates.time\n",
     "train_df['hour'] = dates.hour\n",
-    "train_df['minutes'] = dates.minute"
+    "train_df['minutes'] = dates.minute\n",
+    "\n",
+    "train_df.ix[train_df.hour <12,'time_of_day'] = \"morning\"\n",
+    "train_df.ix[train_df.hour >=12,'time_of_day'] = \"midday\"\n",
+    "train_df.ix[train_df.hour >14,'time_of_day'] = \"afternoon\"\n",
+    "train_df.ix[train_df.hour >18,'time_of_day'] = \"night\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -285,6 +293,7 @@
        "      <th>hour</th>\n",
        "      <th>minutes</th>\n",
        "      <th>time</th>\n",
+       "      <th>time_of_day</th>\n",
        "      <th>dow</th>\n",
        "      <th>pd</th>\n",
        "      <th>addr</th>\n",
@@ -296,96 +305,101 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2015-05-13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>53</td>\n",
-       "      <td>23:53:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>19790</td>\n",
+       "      <td> 2015-05-13</td>\n",
+       "      <td> 23</td>\n",
+       "      <td> 53</td>\n",
+       "      <td> 23:53:00</td>\n",
+       "      <td> night</td>\n",
+       "      <td> 6</td>\n",
+       "      <td> 4</td>\n",
+       "      <td> 19790</td>\n",
        "      <td>-122.425892</td>\n",
-       "      <td>37.774599</td>\n",
-       "      <td>37</td>\n",
+       "      <td> 37.774599</td>\n",
+       "      <td> 37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2015-05-13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>53</td>\n",
-       "      <td>23:53:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>19790</td>\n",
+       "      <td> 2015-05-13</td>\n",
+       "      <td> 23</td>\n",
+       "      <td> 53</td>\n",
+       "      <td> 23:53:00</td>\n",
+       "      <td> night</td>\n",
+       "      <td> 6</td>\n",
+       "      <td> 4</td>\n",
+       "      <td> 19790</td>\n",
        "      <td>-122.425892</td>\n",
-       "      <td>37.774599</td>\n",
-       "      <td>21</td>\n",
+       "      <td> 37.774599</td>\n",
+       "      <td> 21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-05-13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>33</td>\n",
-       "      <td>23:33:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>22697</td>\n",
+       "      <td> 2015-05-13</td>\n",
+       "      <td> 23</td>\n",
+       "      <td> 33</td>\n",
+       "      <td> 23:33:00</td>\n",
+       "      <td> night</td>\n",
+       "      <td> 6</td>\n",
+       "      <td> 4</td>\n",
+       "      <td> 22697</td>\n",
        "      <td>-122.424363</td>\n",
-       "      <td>37.800414</td>\n",
-       "      <td>21</td>\n",
+       "      <td> 37.800414</td>\n",
+       "      <td> 21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2015-05-13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>30</td>\n",
-       "      <td>23:30:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4266</td>\n",
+       "      <td> 2015-05-13</td>\n",
+       "      <td> 23</td>\n",
+       "      <td> 30</td>\n",
+       "      <td> 23:30:00</td>\n",
+       "      <td> night</td>\n",
+       "      <td> 6</td>\n",
+       "      <td> 4</td>\n",
+       "      <td>  4266</td>\n",
        "      <td>-122.426995</td>\n",
-       "      <td>37.800873</td>\n",
-       "      <td>16</td>\n",
+       "      <td> 37.800873</td>\n",
+       "      <td> 16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-05-13</td>\n",
-       "      <td>23</td>\n",
-       "      <td>30</td>\n",
-       "      <td>23:30:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1843</td>\n",
+       "      <td> 2015-05-13</td>\n",
+       "      <td> 23</td>\n",
+       "      <td> 30</td>\n",
+       "      <td> 23:30:00</td>\n",
+       "      <td> night</td>\n",
+       "      <td> 6</td>\n",
+       "      <td> 5</td>\n",
+       "      <td>  1843</td>\n",
        "      <td>-122.438738</td>\n",
-       "      <td>37.771541</td>\n",
-       "      <td>16</td>\n",
+       "      <td> 37.771541</td>\n",
+       "      <td> 16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date  hour  minutes      time  dow  pd   addr           X          Y  \\\n",
-       "0  2015-05-13    23       53  23:53:00    6   4  19790 -122.425892  37.774599   \n",
-       "1  2015-05-13    23       53  23:53:00    6   4  19790 -122.425892  37.774599   \n",
-       "2  2015-05-13    23       33  23:33:00    6   4  22697 -122.424363  37.800414   \n",
-       "3  2015-05-13    23       30  23:30:00    6   4   4266 -122.426995  37.800873   \n",
-       "4  2015-05-13    23       30  23:30:00    6   5   1843 -122.438738  37.771541   \n",
+       "         date  hour  minutes      time time_of_day  dow  pd   addr  \\\n",
+       "0  2015-05-13    23       53  23:53:00       night    6   4  19790   \n",
+       "1  2015-05-13    23       53  23:53:00       night    6   4  19790   \n",
+       "2  2015-05-13    23       33  23:33:00       night    6   4  22697   \n",
+       "3  2015-05-13    23       30  23:30:00       night    6   4   4266   \n",
+       "4  2015-05-13    23       30  23:30:00       night    6   5   1843   \n",
        "\n",
-       "   crime  \n",
-       "0     37  \n",
-       "1     21  \n",
-       "2     21  \n",
-       "3     16  \n",
-       "4     16  "
+       "            X          Y  crime  \n",
+       "0 -122.425892  37.774599     37  \n",
+       "1 -122.425892  37.774599     21  \n",
+       "2 -122.424363  37.800414     21  \n",
+       "3 -122.426995  37.800873     16  \n",
+       "4 -122.438738  37.771541     16  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df_new = train_df[['date','hour','minutes','time','dow','pd','addr','X','Y','crime']]\n",
+    "train_df_new = train_df[['date','hour','minutes','time','time_of_day', 'dow','pd','addr','X','Y','crime']]\n",
     "train_df_new.head()"
    ]
   },
